--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "Server side of the coderHouse final project",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Gerardo Linares",
-  "license": "ISC",
-  "devDependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.20"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "Server side of the coderHouse final project",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"start": "nodemon app.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write ."
+	},
+	"keywords": [],
+	"author": "Gerardo Linares",
+	"license": "ISC",
+	"devDependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"eslint": "^8.25.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.3.0",
+		"eslint-plugin-promise": "^6.0.1",
+		"express": "^4.18.1",
+		"nodemon": "^2.0.20",
+		"prettier": "^2.7.1"
+	}
 }
