--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,1 @@
-CONNECTION_MONGODB_URL="mongodb+srv://user:user@agave.3swv3we.mongodb.net/?retryWrites=true&w=majority"
+CONNECTION_MONGODB_URL="mongodb+srv://user:password@agave.3swv3we.mongodb.net/?retryWrites=true&w=majority"
