--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
     "recharts": "^2.1.16",
+    "socket.io-client": "^4.5.3",
     "sweetalert2": "^11.4.34",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
