--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,10 @@
 		"prettier": "^2.7.1"
 	},
 	"dependencies": {
-		"mongoose": "^6.7.0"
+		"connect-mongodb-session": "^3.1.1",
+		"cookie-parser": "^1.4.6",
+		"express-session": "^1.17.3",
+		"mongoose": "^6.7.0",
+		"socket.io": "^4.5.3"
 	}
 }
