--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
 		"prettier": "^2.7.1"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"connect-mongodb-session": "^3.1.1",
 		"cookie-parser": "^1.4.6",
 		"express-session": "^1.17.3",
