--- a/client/.env.example
+++ b/client/.env.example
@@ -6,3 +6,4 @@ REACT_APP_SIGNIN_URL="http://localhost:8080/api/users/signin"
 REACT_APP_ISLOGGED_URL="http://localhost:8080/api/users/islogged"
 REACT_APP_LOGOUT_URL="http://localhost:8080/api/users/logout"
 REACT_APP_ALL_USERS="http://localhost:8080/api/users/allUsers"
+REACT_APP_CONVERT_USER_TYPE="http://localhost:8080/api/users/convert"
