--- a/client/.env.example
+++ b/client/.env.example
@@ -7,3 +7,4 @@ REACT_APP_ISLOGGED_URL="http://localhost:8080/api/users/islogged"
 REACT_APP_LOGOUT_URL="http://localhost:8080/api/users/logout"
 REACT_APP_ALL_USERS="http://localhost:8080/api/users/allUsers"
 REACT_APP_CONVERT_USER_TYPE="http://localhost:8080/api/users/convert"
+REACT_APP_GET_ALL_LOGS="http://localhost:8080/api/logs/allLogs"
